Fixed Flex-Layout problem

--- a/src/app/LOGIN_SIGNUP/login-signup/login-signup.component.css
+++ b/src/app/LOGIN_SIGNUP/login-signup/login-signup.component.css
@@ -1,3 +1,7 @@
+.title {
+  color: white;
+}
+
 .login-page {
   width: 100%;
   height: 100%;
@@ -9,7 +13,8 @@
 }
 
 mat-card {
-  width: 30%;
+  width: 40%;
+  height: 55%;
   margin: 10% auto;
   border-radius: 8px;
   background-color: #d9dbf1;
@@ -32,6 +37,7 @@ mat-card-content {
   width: 80%;
   margin: 20px auto;
   background-color: #8783d1;
+  color: white;
 }
 
 mat-card-title {
